crates/tepra/tests/snapshots/askama_render__jobs_pagination_multiple_pages.snap
---
source: crates/tepra/tests/askama_render.rs
expression: html
---





<!doctype html>
<html lang="ja" data-theme="corporate">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Jobs — Label Creator for TEPRA</title>
  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
  <script>
    // Read before the stylesheet loads to avoid a flash of the wrong theme
    // (FOUC). Declared at page (not IIFE) scope: the body-end <script> below
    // reuses THEME_STORAGE_KEY/THEME_DARK to persist the toggle change —
    // both scripts run in the same document, so this depends on source
    // order, not a module import.
    const THEME_STORAGE_KEY = "theme";
    const THEME_DARK = "business";
    // Page-scoped (not IIFE-local) for the same reason as THEME_STORAGE_KEY:
    // pages/print.html reads this to decide its initial polling state before
    // the body-end <script> below has set the checkbox's `checked` property.
    const PRINTER_AUTOREFRESH_KEY = "printerAutoRefresh";
    (() => {
      if (localStorage.getItem(THEME_STORAGE_KEY) === THEME_DARK) {
        document.documentElement.setAttribute("data-theme", THEME_DARK);
      }
    })();
  </script>
  <link rel="stylesheet" href="/static/app.css">
  <script src="/static/htmx.min.js" defer></script>
</head>
<body class="min-h-screen bg-base-200">
  <a href="#main" class="sr-only focus:not-sr-only focus:absolute focus:top-2 focus:left-2 btn btn-sm">
    Skip to content
  </a>

  <div class="drawer lg:drawer-open">
    <input id="drawer-toggle" type="checkbox" class="drawer-toggle" />

    <div class="drawer-content flex flex-col">
      <div class="navbar bg-base-100 shadow-sm">
        <div class="flex-none lg:hidden">
          <label for="drawer-toggle" class="btn btn-square btn-ghost" aria-label="Open menu">
            <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
              <path d="M4 6h16M4 12h16M4 18h16"/>
            </svg>
          </label>
        </div>
        
<div class="breadcrumbs text-sm flex-1 px-2">
  <ul>
    
      <li>
        
          <span aria-current="page">Jobs</span>
        
      </li>
    
  </ul>
</div>

        
<label class="flex-none flex items-center gap-1 mr-2 cursor-pointer" title="Auto-refresh printer status every 5s">
  <svg class="size-4" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
    <path stroke-linecap="round" stroke-linejoin="round" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/>
  </svg>
  <span class="hidden sm:inline text-sm">Auto-refresh</span>
  <input type="checkbox" id="printer-refresh-toggle" class="toggle toggle-sm toggle-primary [--radius-selector:9999px]" aria-label="Toggle auto-refresh">
</label>

        
<label class="swap swap-rotate flex-none mr-2">
  <input type="checkbox" class="theme-controller" value="business" aria-label="Toggle theme">
  <svg class="swap-off size-5" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
    <circle cx="12" cy="12" r="5"/>
    <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"/>
  </svg>
  <svg class="swap-on size-5" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
    <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
  </svg>
</label>

      </div>

      <main id="main" tabindex="-1" class="flex-1 p-4">
        
  
    <div class="join join-vertical w-full mb-4">
      
        
  <div class="collapse collapse-arrow join-item border border-base-300 bg-base-100">
    <input type="checkbox" aria-label="Job #2 (PT-P710BT, label.lw1)" />
    <div class="collapse-title flex flex-wrap items-center gap-3">
      <span class="badge badge-outline">PT-P710BT</span>
      <code class="font-mono text-sm">label.lw1</code>
      <span class="opacity-70 text-sm" data-epoch="1700000100"></span>
      
        <span class="badge badge-success badge-sm ml-auto">accepted</span>
      
    </div>
    <div class="collapse-content flex flex-col gap-3">
      
        <div>
          <h3 class="font-semibold text-sm mb-1">Tape 1</h3>
          <div class="overflow-x-auto">
            <table class="table table-sm">
              <thead>
                <tr><th>Title</th><th>Value</th></tr>
              </thead>
              <tbody>
                
                  <tr><td><code>Name</code></td><td>Alice</td></tr>
                
              </tbody>
            </table>
          </div>
        </div>
      

      
        <p class="text-sm">jobid=42</p>
        
          <div hx-get="/ui/jobs/PT-P710BT/42" hx-trigger="load" hx-swap="innerHTML">
            <span class="loading loading-spinner loading-sm"></span>
          </div>
        
      

      <a href="/ui/print?from=2" class="btn btn-sm btn-outline self-start">Re-print</a>
    </div>
  </div>

      
    </div>

    
  
    <div class="join">
      
        <a href="/ui/jobs?page=1" class="join-item btn btn-sm" aria-label="Previous page">&laquo;</a>
      

      
        <a
          href="/ui/jobs?page=1"
          class="join-item btn btn-sm "
          
        >1</a>
      
        <a
          href="/ui/jobs?page=2"
          class="join-item btn btn-sm btn-active"
          aria-current="page"
        >2</a>
      

      
        <span class="join-item btn btn-sm btn-disabled" aria-hidden="true">&raquo;</span>
      
    </div>
  

  

  <script>
    (() => {
      document.querySelectorAll("[data-epoch]").forEach((el) => {
        const epoch = Number(el.dataset.epoch);
        if (Number.isNaN(epoch)) {
          return;
        }
        el.textContent = new Date(epoch * 1000).toLocaleString();
      });
    })();
  </script>

      </main>
    </div>

    <div class="drawer-side">
      <label for="drawer-toggle" aria-label="Close menu" class="drawer-overlay"></label>
      
<div class="bg-base-100 border-r border-base-300 min-h-full w-64 flex flex-col">
  
  <svg class="hidden" aria-hidden="true">
    <symbol id="icon-printer" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
      <rect x="6" y="3" width="12" height="6" rx="1"/>
      <path d="M6 14H4a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-2"/>
      <rect x="6" y="14" width="12" height="7" rx="1"/>
    </symbol>
  </svg>

  <div class="flex flex-col items-center gap-2 px-4 py-6 border-b border-base-300 text-base-content">
    <a href="/ui/" class="flex flex-col items-center gap-2">
      <svg class="size-8" aria-hidden="true"><use href="#icon-printer"/></svg>
      <div class="flex flex-col items-center leading-tight">
        <span class="text-base font-semibold">Label Creator</span>
        <span class="text-xs text-base-content/60">for TEPRA</span>
      </div>
    </a>
    <span class="text-xs text-base-content/60">v[VERSION] ([HASH])</span>
    <span class="text-xs text-base-content/60">
      Created by <a href="https://github.com/naa0yama" class="link link-hover" target="_blank" rel="noopener noreferrer">naa0yama</a>
    </span>
  </div>

  <ul class="menu p-4 gap-1 w-full">
  <li>
    <a href="/ui/" class="flex-nowrap justify-start">
      <svg class="size-5" aria-hidden="true"><use href="#icon-printer"/></svg>
      Printers
    </a>
  </li>

  <li>
    <a href="/ui/print" class="flex-nowrap justify-start">
      <svg class="size-5" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
        <path d="M12 2 2 7l10 5 10-5-10-5Z"/>
        <path d="m2 17 10 5 10-5"/><path d="m2 12 10 5 10-5"/>
      </svg>
      Print
    </a>
  </li>

  <li>
    <a href="/ui/jobs" class="flex-nowrap justify-start menu-active" aria-current="page">
      <svg class="size-5" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
        <path d="M9 5H7a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-2"/>
        <rect x="9" y="3" width="6" height="4" rx="1"/><path d="M9 12h6M9 16h4"/>
      </svg>
      Jobs
    </a>
  </li>

  <li>
    <a href="/ui/api" class="flex-nowrap justify-start">
      <svg class="size-5" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
        <polyline points="16 18 22 12 16 6"/>
        <polyline points="8 6 2 12 8 18"/>
      </svg>
      API
    </a>
  </li>

  </ul>
</div>

    </div>
  </div>

  <div id="toast-container" class="toast toast-top toast-end z-50"
       aria-live="polite" aria-atomic="true"></div>

  <script>
    (() => {
      const toggle = document.querySelector(".theme-controller");
      if (!toggle) return;
      // WHY-NOT: hardcoding "business" here too — read the checkbox's own
      // `value` attribute (set in theme_toggle.html) as the single source
      // for the dark-theme name.
      toggle.checked = localStorage.getItem(THEME_STORAGE_KEY) === toggle.value;
      toggle.addEventListener("change", () => {
        localStorage.setItem(THEME_STORAGE_KEY, toggle.checked ? toggle.value : "corporate");
      });
    })();

    (() => {
      const toggle = document.getElementById("printer-refresh-toggle");
      if (!toggle) return;
      toggle.checked = localStorage.getItem(PRINTER_AUTOREFRESH_KEY) === "true";
      toggle.addEventListener("change", () => {
        localStorage.setItem(PRINTER_AUTOREFRESH_KEY, toggle.checked ? "true" : "false");
      });
    })();
  </script>
</body>
</html>
